<resources>
    <string name="app_name">FuelManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="milage">Milage</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="leters">Leters</string>
</resources>
